tests/duarouter/errors/default_departpos_false/errors.duarouter
Error: Invalid departPos definition for option 'departpos';
 must be one of ("random", "random_free", "free", "base", "last" or a float)
Quitting (on error).
